# GhostShell

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.MD  README.md  flag.txt  install.sh  pnpm-lock.yaml
Backend/: package.json
backend/: hi
backend/rust_terminal/: Cargo.toml
config/: ghost.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Sidebar.jsx  StegoEncode.jsx  TerminalTab.jsx  Trap.jsx
frontend/src/features/Profile/: ProfileForm.jsx  ProfileHeader.jsx  ProfilePage.jsx  profile.css
frontend/src/hooks/: useSteg.ts
project-ghost/: Cargo.toml  README.md
project-ghost/src/: app.rs  main.rs  tasks.rs  ui.rs
src/: lib.rs  main.rs
src/actions/: counter.rs  deceive.rs  mod.rs  neutralize.rs  probe.rs
src/agent/: brain.rs  mod.rs  reflexes.rs  senses.rs
src/core/: config.rs  crypto.rs  logger.rs  mod.rs
src/exporters/: mod.rs  report.rs  team.rs
src/perception/: anomaly.rs  auth.rs  intelligence.rs  mod.rs  network.rs  system.rs
src/stealth/: clean.rs  hide.rs  mod.rs  obfuscate.rs
tests/: integration.rs
