[package]
name = "project-ghost"
version = "0.1.0"
edition = "2021"
authors = ["Ghost Team"]
description = "Silent Cyber Operations Agent"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KVLNK12305/GhostShell"
readme = "README.md"

[lib]
name = "ghostshell"
path = "src/lib.rs"

[[test]]
name = "integration_test"
path = "tests/integration.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Core
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# System
sysinfo = "0.29"
nix = { version = "0.27", features = ["process", "hostname", "default", "fs", "signal"] }
libc = "0.2"

# Security & Cryptography
ring = "0.17"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "chrono"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Text Processing
regex = "1.10"

# Path Expansion
shellexpand = "3.0"

# Random
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
full = ["tokio/full"]